--- a/index.html
+++ b/index.html
@@ -68,13 +68,26 @@
                                 </div>
                             </div>
                             <div class="row text-center">
-                                <p class="lead empresa empresa_cuadro">Connection Light</p>
+                                <p class="lead empresa empresa_cuadro">Connection Live</p>
                             </div>
                             <div class="row text-center">
                                 <div class="col-xs-12 buttons  scroll-to">
                                     <a id="unete_point" href="#" class="boton_ingresa">UNETE YA!</a>
                                 </div>
                             </div>
+                                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img class="img-responsive img-full" src="<?php echo base_url('assets/images/banner.jpg'); ?>" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src="<?php echo base_url('assets/inicio/img/equi2.jpg'); ?>" alt="">
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src="<?php echo base_url('assets/inicio/img/equi3.jpg'); ?>" alt="">
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
