--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                             <div class="row text-center">
                                 <div class="col-xs-12">
                                     <h1 class="logo logo_cuadro">D'VIDA</h1>
-                                    <h1><span class="writer" data-writer-command="['PayPal?', 'Apple Pay?', 'Venmo?', 'Bitcoin?']"></span></h1>
                                 </div>
                             </div>
                             <div class="row text-center">
                                 <p class="lead empresa empresa_cuadro">Connection Light</p>
+                                <h1><span class="writer" data-writer-command="['Restaurantes', 'Hoteles', 'Algo mas']"></span></h1>
                             </div>
                             <div class="row text-center">
                                 <div class="col-xs-12 buttons  scroll-to">
