--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/estilo.css">
-        <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One|Fredoka+One" rel="stylesheet">
     </head>
     <body data-spy="scroll">
         <!--pre-loader-->
@@ -23,7 +23,7 @@
 
         <!--main menu-->
         <!-- Static navbar -->
-        <header class="navbar navbar-inverse navbar-default navbar-fixed-top">
+        <header class="navbar navbar-inverse navbar-default navbar-fixed-top navbar-estilo">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -69,7 +69,8 @@
                             </div>
                             <div class="row text-center">
                                 <p class="lead empresa empresa_cuadro">Connection Light</p>
-                                <h1><span class="writer" data-writer-command="['Restaurantes', 'Hoteles', 'Algo mas']"></span></h1>
+                                <h1 class="empresa_cambio"><span class="writer" data-writer-command="['Restaurantes', 'Hoteles', 'Algo mas']"></span>
+                                <span class="typed-cursor">|</span></h1>
                             </div>
                             <div class="row text-center">
                                 <div class="col-xs-12 buttons  scroll-to">
