--- a/index-hoteles.html
+++ b/index-hoteles.html
@@ -38,7 +38,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
-                        <li><a href="#" class="cuadro_ingresar registrar-1">Registrar mi Hotel</a></li>
+                        <li><a href="#" class="cuadro_ingresar registrar-1">Registrar mi Restaurante</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
@@ -47,7 +47,7 @@
 
 
         <!--start header-->
-        <section class="header-full-screen background-rest" id="home" data-stellar-background-ratio="0.5">
+        <section class="header-full-screen background-hotel" id="home" data-stellar-background-ratio="0.5">
             <div class="absolute_full">
                 <div class="display-table">
                     <div class="vertical-middle">
@@ -58,11 +58,11 @@
                             <div class="space-40"></div>
                             <div class="row text-center">
                                 <div class="col-xs-12">
-                                    <h1 class="logo logo_cuadro rest-logo">Restaurantes</h1>
+                                    <h1 class="logo logo_cuadro rest-logo">Hoteles</h1>
                                 </div>
                             </div>
                             <div class="row text-center">
-                                <p class="font-rest empresa_cuadro">Encuentra tu restaurante ideal al mejor precio</p>
+                                <p class="font-rest empresa_cuadro">Encuentra tu hotel ideal al mejor precio</p>
             
                             </div>
                             <div>
