--- a/index.html
+++ b/index.html
@@ -95,23 +95,29 @@
                     <div class="col-xs-12 col-md-4 cuadro-stylos">
                         <img src="assets/images/cutlery.svg" alt="" class="img-stylos">
                         <div class="space-20"></div>
-                        <h3 class="carta-letra">RESTAURANTES</h3>
-                        <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                        <button class="btn btn-primary enviar-stylos" type="submit">Ingrese Ya!</button>
+                        <form action="index-restaurante.html" method="get" accept-charset="utf-8">
+                            <h3 class="carta-letra">RESTAURANTES</h3>
+                            <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                        </form>
                     </div>
                    <div class="col-xs-12 col-md-4 cuadro-stylos">
                         <img src="assets/images/cutlery.svg" alt="" class="img-stylos">
                         <div class="space-20"></div>
-                        <h3 class="carta-letra">RESTAURANTES</h3>
-                        <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                        <button class="btn btn-primary enviar-stylos" type="submit">Ingrese Ya!</button>
+                        <form action="index-hoteles.html" method="get" accept-charset="utf-8">
+                            <h3 class="carta-letra">HOTELES</h3>
+                            <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                        </form>
                     </div>
                   <div class="col-xs-12 col-md-4 cuadro-stylos">
                         <img src="assets/images/cutlery.svg" alt="" class="img-stylos">
                         <div class="space-20"></div>
-                        <h3 class="carta-letra">RESTAURANTES</h3>
-                        <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                        <button class="btn btn-primary enviar-stylos" type="submit">Ingrese Ya!</button>
+                       <form action="index-restaurante.html" method="get" accept-charset="utf-8">
+                            <h3 class="carta-letra">RESTAURANTES</h3>
+                            <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                        </form>
                     </div>
                 </div>
             </div>
