--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         <li class="active"><a href="#home">Inicio</a></li>
                         <li><a href="#introduction">Servicios</a></li>
                         <li><a href="#" class="cuadro_ingresar">Ingresar</a></li>
-                        <li><a href="#" class="cuadro_ingresar">Registrarse</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
@@ -85,12 +84,12 @@
             <div class="space-60 nosotros_stylos"></div>
             <div class="row">
                   <div class="col-xs-12 nosotros_stylos1">
-                        <h1 class="subtitulo">¡ENCUENTRA LO QUE BUSCAS!</h1>
+                        <h1 class="subtitulo">¡BUSCAR!</h1>
                         <h5 class="subtitulo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</h5>
                     </div>
             </div>
             <div class="space-60"></div>
-            <div class="container no-padding text-center">
+            <div class="container text-center">
                 <div class="row ">
                     <div class="col-xs-12 col-md-4 cuadro-stylos">
                         <img src="assets/images/cutlery.svg" alt="" class="img-stylos">
