--- a/index-hoteles.html
+++ b/index-hoteles.html
@@ -38,7 +38,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
-                        <li><a href="#" class="cuadro_ingresar registrar-1">Registrar mi Restaurante</a></li>
+                        <li><a href="#" class="cuadro_ingresar registrar-1">Registrar mi Hotel</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
