--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
                         <li><a href="#introduction">Servicios</a></li>
-                        <li><a href="#" class="cuadro_ingresar">Ingresar</a></li>
+                        <li><a id="cuadro_ingresar" href="#">Ingresar</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
