--- a/index-restaurante.html
+++ b/index-restaurante.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
                         <li class=""><a href="#">Más populares</a></li>
-                        <li><a href="#" class="cuadro_ingresar registrar-1">Registrar mi Restaurante</a></li>
+                        <li><a href="#" id="cuadro_ingresar" class="registrar-1">Registrar mi Restaurante</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
