--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/estilo.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/estilos1.css">
         <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One|Fredoka+One" rel="stylesheet">
     </head>
     <body data-spy="scroll">
