--- a/index-sistema.html
+++ b/index-sistema.html
@@ -38,54 +38,19 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
-                        <li><a href="#introduction">Servicios</a></li>
-                        <li><a id="cuadro_ingresar" href="index-sistema.html">Ingresar</a></li>
+                        <li><a href="#introduction">Sistemas</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
         </header>
         <!--end main menu-->
-        <!--start header-->
-        <section class="header-full-screen background-1" id="home" data-stellar-background-ratio="0.5">
-            <div class="absolute_full">
-                <div class="display-table">
-                    <div class="vertical-middle">
-                        <div class="container ">
-                        <div class="space-100"></div>
-                            <div class="row text-center">
-                                <div class="col-xs-12">
-                                    <h1 class="logo logo_cuadro">RED</h1>
-                                </div>
-                            </div>
-                            <div class="space-40"></div>
-                            <div class="row text-center">
-                                <div class="col-xs-12">
-                                    <h1 class="logo logo_cuadro">D'VIDA</h1>
-                                </div>
-                            </div>
-                            <div class="row text-center">
-                                <p class="lead empresa empresa_cuadro">Connection Light</p>
-                                <h1 class="empresa_cambio"><span class="writer" data-writer-command="['Restaurantes', 'Hoteles', 'Algo mas']"></span>
-                                <span class="typed-cursor">|</span></h1>
-                            </div>
-                            <div class="row text-center">
-                                <div class="col-xs-12 buttons  scroll-to">
-                                    <a id="unete_point" href="#" class="boton_ingresa">UNETE YA!</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--end main header-->
 
         <!--nosotros-->
         <section id="nosotros" class="nosotros-section">
             <div class="space-60 nosotros_stylos"></div>
             <div class="row">
                   <div class="col-xs-12 nosotros_stylos1">
-                        <h1 class="subtitulo">¡BUSCAR!</h1>
+                        <h1 class="subtitulo">SISTEMAS!</h1>
                         <h5 class="subtitulo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</h5>
                     </div>
             </div>
@@ -98,7 +63,7 @@
                         <form action="index-restaurante.html" method="get" accept-charset="utf-8">
                             <h3 class="carta-letra">RESTAURANTES</h3>
                             <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">INGRESAR!</button>
                         </form>
                     </div>
                    <div class="col-xs-12 col-md-4 cuadro-stylos">
@@ -107,7 +72,7 @@
                         <form action="index-hoteles.html" method="get" accept-charset="utf-8">
                             <h3 class="carta-letra">HOTELES</h3>
                             <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">INGRESAR!</button>
                         </form>
                     </div>
                   <div class="col-xs-12 col-md-4 cuadro-stylos">
@@ -116,54 +81,12 @@
                        <form action="index-restaurante.html" method="get" accept-charset="utf-8">
                             <h3 class="carta-letra">RESTAURANTES</h3>
                             <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                            <button class="btn btn-primary enviar-stylos" type="submit" href="">BUSCAR!</button>
+                            <button class="btn btn-primary enviar-stylos" type="submit" href="">INGRESAR!</button>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="space-60"></div>
-            <!-- <div class="container-fluid no-padding">
-                <div class="row no-margin">
-                    <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-green carta">
-                            <div class="lado frente">
-                                <h3>RESTAURANTES</h3>
-                            </div>
-                            <div class="lado atras">
-                                <h3 class="carta-letra">RESTAURANTES</h3>
-                                <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                                <button class="btn btn-primary enviar-stylos" type="submit">Ingrese Ya!</button>
-                            </div>
-                        </div>
-                    </div>
-                   <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-blue carta">
-                            <div class="lado frente">
-                                <h3>RESTAURANTES</h3>
-                            </div>
-                            <div class="lado atras">
-                                <h3 class="carta-letra">RESTAURANTES</h3>
-                                <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-green carta">
-                            <div class="lado frente">
-                                <h3>RESTAURANTES</h3>
-                            </div>
-                            <div class="lado atras">
-                                <h3 class="carta-letra">RESTAURANTES</h3>
-                                <h5 class="carta-letra1">Encuentra los mejores restaurantes.</h5>
-                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-               
-            </div> -->
         </section>
         <!--contactenos-->
  
