--- a/index-restaurante.html
+++ b/index-restaurante.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/estilo.css">
         <link rel="stylesheet" type="text/css" href="assets/css/estilos1.css">
-        <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One|Fredoka+One|Nova+Oval" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico|Patua+One|Fredoka+One|Nova+Oval|Josefin+Sans" rel="stylesheet">
     </head>
     <body data-spy="scroll">
         <!--pre-loader-->
@@ -38,7 +38,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right scroll-to">
                         <li class="active"><a href="#home">Inicio</a></li>
-                        <li class=""><a href="#">Más populares</a></li>
+                        <li class=""><a href="#mas_populares">Más populares</a></li>
                         <li><a href="#" id="cuadro_ingresar" class="registrar-1">Registrar mi Restaurante</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -68,7 +68,7 @@
                             </div>
                             <div>
                                 <div class="input-group buscador">
-                                  <input type="text" class="form-control">
+                                  <input type="text" class="form-control" placeholder="Ej. Lima">
                                   <span class="input-group-addon buscar">Buscar</span>
                                 </div>                                
                             </div>
@@ -78,8 +78,27 @@
             </div>
         </section>
         <!--end main header-->
+        <section class="background-maspop" id="mas_populares" data-stellar-background-ratio="0.5">
+            <div class="absolute_full">
+                <div class="display-table">
+                    <div class="vertical-middle">
+                        <div class="container ">
+                        <div class="space-40"></div>
+                            <div class="row text-center">
+                                <div class="col-xs-12">
+                                    <h1 class="font-rest tam-1">Restaurantes más populares</h1>
+                                </div>
+                            </div>
+                          <div class="cuadro-1">
+                            <div class="panel-heading">Panel Heading</div>
+                            <div class="panel-body">Panel Content</div>
+                          </div>
 
-       
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>      
         <!--back to top-->
         <a href="#" class="scrollToTop"><i class="ion-android-arrow-dropup-circle"></i></a>
         <!--back to top end-->
