cambios en las tarjetas

--- a/index.html
+++ b/index.html
@@ -87,81 +87,109 @@
         <!--nosotros-->
         <section id="nosotros" class="nosotros-section">
             <div class="space-60 nosotros_stylos"></div>
-             <div class="col-xs-12 nosotros_stylos1">
+            <div class="row">
+                  <div class="col-xs-12 nosotros_stylos1">
                         <h1 class="subtitulo">¡ENCUENTRA LO QUE BUSCAS!</h1>
                         <h5 class="subtitulo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</h5>
                     </div>
+            </div>
+           
                <div class="space-60"></div>
                <div class="container-fluid no-padding">
                 <div class="row no-margin">
                     <div class="col-sm-4 no-padding text-center">
-                        <div class="carta">
+                        <div class="step-box bg-green carta">
                             <div class="lado frente">
                                 <h3>RESTAURANTES</h3>
-                                <img src="assets/images/restaurante.jpg" alt="">
                             </div>
                             <div class="lado atras">
-                                <h3>SISTEMA</h3>
-                                <h3>RESTAURANTES</h3>
-                                <h5>Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
-                                <p>El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
-                                <button type="">INGRESE YA!</button>
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-red">
-                            <h1>RESTAURANTES</h1>
-                            <p>
-                                Plusieurs variations de Lorem Ipsum peuvent être trouvées
-                            </p>
-                            <a href="#" class="boton_ingresa">BUSCAR</a>
+                   <div class="col-sm-4 no-padding text-center">
+                        <div class="step-box bg-blue carta">
+                            <div class="lado frente">
+                                <h3>RESTAURANTES</h3>
+                            </div>
+                            <div class="lado atras">
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-blue">
-                            <h1>RESTAURANTES</h1>
-                            <p>
-                                Plusieurs variations de Lorem Ipsum peuvent être trouvées
-                            </p>
-                            <a href="#" class="boton_ingresa">BUSCAR</a>
+                        <div class="step-box bg-green carta">
+                            <div class="lado frente">
+                                <h3>RESTAURANTES</h3>
+                            </div>
+                            <div class="lado atras">
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+               <div class="container-fluid no-padding">
                 <div class="row no-margin">
                     <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-red">
-                            <h1>RESTAURANTES</h1>
-                            <p>
-                                Plusieurs variations de Lorem Ipsum peuvent être trouvées
-                            </p>
-                            <a href="#" class="boton_ingresa">BUSCAR</a>
+                        <div class="step-box bg-green carta">
+                            <div class="lado frente">
+                                <h3>RESTAURANTES</h3>
+                            </div>
+                            <div class="lado atras">
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-blue">
-                            <h1>RESTAURANTES</h1>
-                            <p>
-                                Plusieurs variations de Lorem Ipsum peuvent être trouvées
-                            </p>
-                            <a href="#" class="boton_ingresa">BUSCAR</a>
+                   <div class="col-sm-4 no-padding text-center">
+                        <div class="step-box bg-blue carta">
+                            <div class="lado frente">
+                                <h3>RESTAURANTES</h3>
+                            </div>
+                            <div class="lado atras">
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-sm-4 no-padding text-center">
-                        <div class="step-box bg-green">
-                            <h1>RESTAURANTES</h1>
-                            <p>
-                                Plusieurs variations de Lorem Ipsum peuvent être trouvées
-                            </p>
-                            <a href="#" class="boton_ingresa">BUSCAR</a>
+                        <div class="step-box bg-green carta">
+                            <div class="lado frente">
+                                <h3>RESTAURANTES</h3>
+                            </div>
+                            <div class="lado atras">
+                                <h3 class="carta-letra">SISTEMA</h3>
+                                <h3 class="carta-letra">RESTAURANTES</h3>
+                                <h5 class="carta-letra1">Incrementa tus ventas y ten un mayor control de tu negocio.</h5>
+                                <p class="carta-letra2">El sistema de punto de venta para negocios gastronómicos al alcance de tu bolsillo.</p>
+                                <button class="btn btn-primary" type="submit">Ingrese Ya!</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+
                
-                    </div>
-                   </div>
-               </div>
+            </div>
         </section>
            <!--  <div class="container-fluid no-padding">
                 <div class="row no-margin">
